--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/nicolaszucca/restaurant-orders#readme",
   "devDependencies": {
-    "eslint": "^8.47.0"
+    "eslint": "^8.47.0",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
