--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
+    "mercadopago": "^2.0.0",
     "mongoose": "^7.4.4",
     "socket.io": "^4.7.2"
   }
